--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,19 @@
-# dependencies
-/node_modules
-/.pnp
+# Frontend
+
+# Dependencies
+node_modules/
+.pnp/
 .pnp.js
 
-# testing
-/coverage
+# Testing
+coverage/
 
-# production
-/build
+# Production build
+build/
 
-# misc
+# Miscellaneous
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
@@ -19,3 +22,36 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Logs
+logs
+*.log
+logs/*.log
+
+# Backend
+
+# Python virtual environment
+venv/
+
+# Python specific
+__pycache__/
+*.py[cod]
+*.so
+*.egg
+*.egg-info/
+dist/
+build/
+
+# Flask instance folder
+instance/
+
+# Environment variables
+.env
+.env.* 
+
+# IDE/Editor specific
+.vscode/
+.idea/
+
+# Miscellaneous
+*.swp
